bug 9450: Fixed Policy Manager login to reject invalid ports (rather than silently falling back to the default port).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27243 219f1c6e-4a0e-43c8-96f2-6e749be13fd4